# obj-renderer-rs

./: .gitignore  Cargo.toml  build.rs  note
res/shaders/: object.frag  object.vert  pbr-ref.frag  pbr-ref.vert  triangle.frag  triangle.vert
src/: main.rs
src/app/: mod.rs  system.rs
src/frontend/graphic/: .renderer.rs  constants.rs  data_type.rs  mod.rs  render_system.rs  renderer.rs  window.rs
src/frontend/graphic/hal/: adapter.rs  buffer.rs  descriptor.rs  descriptor_set_layout.rs  device.rs  image.rs  mod.rs  pipeline.rs  prelude.rs  render_pass.rs  shader_module.rs  swapchain.rs
src/frontend/graphic/hal/util/: buffer.rs
src/lib/: mod.rs  util.rs
src/lib/math/: camera.rs  geometry.rs  light.rs  mod.rs
src/lib/resource/: gfs.rs  mod.rs
src/lib/util/: application_root.rs
